# Benchmark-Gemma-Models

./: .gitignore  NOTICE  README.md  Timeline.xlsx  generate_default_config.py  hello_world.ipynb  plotting_results.ipynb  pyproject.toml  requirements.txt
benchmarks_output/: benchmark_results.json
benchmarks_output_comprehensive_en/: benchmark_results.json
src/: config_models.py  generate_default_config.py
src/benchmark/: benchmark_loader.py
src/benchmark/custom_loader_scripts/: create_sample_csv.py  my_dataset_functions.py  my_metrics_functions.py  my_model_functions.py  my_post_processor_functions.py  (+1 more)
src/config/: advanced_custom_benchmark_config.yaml  basic_benchmark_config.yaml  benchmark_comprehensive_custom_loaders.yaml  benchmark_config(1).yaml  benchmark_config.yaml  benchmark_config.yml  benchmark_custom_dataset.yaml  benchmark_pytorch_tensorflow.yaml  logging.conf  prove123.yaml
src/dataset/: base_dataset_loader.py  dataset_factory.py
src/datasets/: concrete_dataset_loader.py  dataset_factory.py
src/evaluation/: accuracy.py  base_metrics.py  base_model_evaluator.py  bleu_score.py  evaluator.py  exact_match.py  f1_score.py  metric_factory.py  perplexity.py  precision.py  recall.py  rouge_score.py
src/models/: benchmark.py  benchmark_loader.py  concrete_models.py  huggingface_model.py  model_loader.py  models_factory.py  pytorch_model.py  tensorflow_model.py
src/scripts/: benchmark_loader.py  evaluator.py  run_benchmark.py
src/tasks/: base_task_handler.py  concrete_task_handlers.py  task_handlers_factory.py
src/utils/: file_manager.py  logger.py
tests/: test_config_models.py
tests/benchmark/: test_benchmark_loader.py
tests/utils/: test_logger.py
visualize/: dashboard.py  data_utils.py  plotting_results.ipynb
(+30 files in other folders)
